<resources>
    <string name="app_name">Airable</string>
    <string name="facebook_app_id">1529650197352110</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register_form">회원 가입</string>
    <string name="register_form_user_name_hint">이름 (홍길동)</string>
    <string name="register_form_user_email_hint">이메일 (example@google.com)</string>
    <string name="register_form_user_password_hint">비밀번호 (8자 이상)</string>
    <string name="register_form_ok">회원 가입</string>
    <string name="register_form_agreement_message">가입과 동시에 약관에 동의하신 것으로 간주합니다.</string>
    <string name="register_form_show_agreement">약관 보기</string>
    <string name="title_activity_login">로그인</string>
    <string name="login_facebook_btn">페이스북으로 로그인</string>
    <string name="login_email_btn">이메일로 로그인</string>
    <string name="login_user_email_hint">이메일 (example@google.com)</string>
    <string name="login_user_password_hint">비밀번호</string>
    <string name="add_travel_options_info1">해당하는 사항을 선택해주시면 포함하여</string>
    <string name="add_travel_options_info2">절차 및 경로를 안내해드립니다</string>
    <string name="title_activity_add_travel_options">추가 선택 사항</string>
    <string name="register_language_setting">언어설정</string>
    <string name="title_activity_register">회원가입</string>
    <string name="search_shops_item_title">가게 이름</string>
    <string name="search_shops_item_location">가게 위치</string>
    <string name="search_shops_hint">검색어 입력</string>
    <string name="search_shops_category">ALL</string>
    <string name="shop_name">STORE NAME</string>
    <string name="shop_detail_location">위치</string>
    <string name="shop_detail_time">운영시간</string>
    <string name="shop_detail_default_location">가게 위치\n들어갈 자리</string>
    <string name="shop_detail_default_time">00 : 00 ~ 00 : 00</string>
    <string name="shop_detail_default_info">가게 설명\n들어갈\n자리</string>
    <string name="shop_detail_mark">경로에 찜하기</string>
    <string name="shop_detail_call">전화 걸기</string>
    <string name="popup_window_mark">찜 하시겠습니까?</string>
    <string name="popup_window_unmark">찜 취소하시겠습니까?</string>
    <string name="popup_window_yes">확인</string>
    <string name="popup_window_cancel">취소</string>
    <string name="popup_window_call_number">031-123-4567</string>
    <string name="popup_window_call">전화 연결 하시겠습니까?</string>
    <string name="popup_window_call_yes">연결</string>
    <string name="search_map">SEARCH MAP</string>
    <string name="search_map_timer">2h 31min</string>
    <string name="search_map_curshop_title">매장 이름</string>
    <string name="search_map_curshop_time">운영시간 00 : 00 - 23 : 59</string>
    <string name="search_map_curshop_location">매장 위치</string>
    <string name="floor_select_b1f">B1F</string>
    <string name="floor_select_1f">1F</string>
    <string name="floor_select_2f">2F</string>
    <string name="floor_select_3f">3F</string>
    <string name="floor_select_4f">4F</string>
    <string name="floor_select_sgenf">sGen</string>
    <string name="floor_select_trafficcenter">교통센터</string>
    <string name="floor_select_terminal">여객터미널</string>
    <string name="floor_select_boardingzone">탑승동</string>
    <string name="title_activity_question">질문</string>
    <string name="title_activity_map_process">MAP</string>
    <string name="map_process_timer">2h 31min</string>
    <string name="map_slide_childview_process_title">절차 이름</string>
    <string name="map_slide_childview_process_detail">절차에 대한 자세한 설명이\n들어가는 공간</string>
    <string name="map_slide_childview_process_location">절차 위치</string>
    <string name="title_activity_retrofit_test">Retrofit 테스트</string>
    <string name="my_air_info_departure_airport">ICN</string>
    <string name="my_air_info_departure_airport_text">인천국제공항</string>
    <string name="my_air_info_arrival_airport">SIN</string>
    <string name="my_air_info_arrival_airport_text">싱가포르 창이</string>
    <string name="my_air_info_date_time">날짜/시간</string>
    <string name="my_air_info_date_time_text">2015.11.12</string>
    <string name="my_air_info_ticket_num">편명</string>
    <string name="my_air_info_ticket_num_text">KE603</string>
    <string name="my_air_info_checkin">체크인 카운터</string>
    <string name="my_air_info_checkin_text">E06-E08</string>
    <string name="my_air_info_airline">항공사</string>
    <string name="my_air_info_airline_text">대한항공</string>
    <string name="my_air_info_gate">탑승구</string>
    <string name="my_air_info_gate_text">41</string>S
    <string name="title_activity_search_air_info">항공 운항 정보 검색</string>
    <string name="departure_tab_date">날짜</string>
    <string name="departure_tab_air_num">편명</string>
    <string name="departure_tab_city">도착지</string>
    <string name="departure_tab_airport">항공사</string>
    <string name="departure_tab_date_hint">2015.11.12 (목)</string>
    <string name="departure_tab_air_num_hint">ex)OZ352</string>
    <string name="departure_tab_city_hint">도착지 선택</string>
    <string name="departure_tab_airport_hint">항공사 선택</string>
    <string name="arrival_tab_date">날짜</string>
    <string name="arrival_tab_air_num">편명</string>
    <string name="arrival_tab_city">출발지</string>
    <string name="arrival_tab_airport">항공사</string>
    <string name="arrival_tab_date_hint">2015.11.12 (목)</string>
    <string name="arrival_tab_air_num_hint">ex)OZ352</string>
    <string name="arrival_tab_city_hint">출발지 선택</string>
    <string name="arrival_tab_airport_hint">항공사 선택</string>
    <string name="title_activity_air_info_list">항공 운항 정보</string>
    <string name="title_activity_my_ticket_info">비행 일정 확인</string>
    <string name="ticket_info_ticket_number">BA5405</string>
    <string name="ticket_info_departure_city">ICN</string>
    <string name="ticket_info_arrival_city">SIN</string>
    <string name="ticket_info_departure_city_ko">인천국제공항</string>
    <string name="ticket_info_arrival_city_ko">싱가포르 창이</string>
    <string name="ticket_info_departure_date1">출발</string>
    <string name="ticket_info_departure_date2">15.11.12</string>
    <string name="ticket_info_arrival_date1">도착</string>
    <string name="ticket_info_arrival_date2">15.11.12</string>
    <string name="ticket_info_departure_time1">출발 시간</string>
    <string name="ticket_info_departure_time2">00 : 14</string>
    <string name="ticket_info_departure_time3">AM</string>
    <string name="ticket_info_arrival_time1">도착 시간</string>
    <string name="ticket_info_arrival_time2">05 : 14</string>
    <string name="ticket_info_arrival_time3">AM</string>
    <string name="ticket_info_check_in1">CHECK-IN</string>
    <string name="ticket_info_check_in2">E06 - E18</string>
    <string name="ticket_info_gate1">GATE</string>
    <string name="ticket_info_gate2">127</string>
    <string name="title_activity_start">시작 화면</string>
    <string name="start_user_name">아이유</string>
    <string name="start_message1">님</string>
    <string name="start_message2">안녕하세요!</string>
    <string name="start_user_name2">아이유</string>
    <string name="start_message3">님의 항공 일정을 등록하시면</string>
    <string name="start_message4">절차 및 경로를 알려드립니다.</string>
</resources>
