<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/popup_window_call"
    android:layout_gravity="center">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_up_2"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_window_call_number"
            android:id="@+id/popup_textview_call_number"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="-20dp"
            android:textColor="#03a9f4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_name"
            android:id="@+id/popup_textview_call_store"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_window_call"
            android:id="@+id/popup_textview_call"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_window_cancel"
            android:id="@+id/popup_button_call_cancel"
            android:layout_gravity="center_horizontal|bottom"
            android:textColor="#263238"
            android:background="#00000000"
            android:textSize="17.5dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_window_call_yes"
            android:id="@+id/popup_button_call_yes"
            android:layout_gravity="right|bottom"
            android:textColor="#03a9fa"
            android:background="#00000000"
            android:textStyle="bold"
            android:textSize="17.5dp" />

    </FrameLayout>

</FrameLayout>