<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/popup_window_mark"
    android:layout_gravity="center">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_up"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_window_mark"
            android:id="@+id/popup_textview_mark"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="17.5dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_window_cancel"
            android:id="@+id/popup_button_cancel"
            android:layout_gravity="center_horizontal|bottom"
            android:textColor="#263238"
            android:background="#00000000"
            android:textSize="17.5dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_window_yes"
            android:id="@+id/popup_button_yes"
            android:layout_gravity="right|bottom"
            android:textColor="#03a9fa"
            android:background="#00000000"
            android:textStyle="bold"
            android:textSize="17.5dp" />

    </FrameLayout>

</FrameLayout>