<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/start_user_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/person" />
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/start_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_user_name"
                    android:textSize="32sp"
                    android:textColor="#40C4FF" />

                <TextView
                    android:id="@+id/start_message1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_message1"
                    android:textSize="32sp"
                    android:textColor="#40C4FF" />
            </LinearLayout>

            <TextView
                android:id="@+id/start_message2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_message2"
                android:textColor="#40C4FF"
                android:textSize="32sp"
                android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/start_user_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_user_name2"
                    android:textSize="14sp"
                    android:textColor="#B0BEC5" />

                <TextView
                    android:id="@+id/start_message3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_message3"
                    android:textSize="14sp"
                    android:textColor="#B0BEC5" />
            </LinearLayout>

            <TextView
                android:id="@+id/start_message4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_message4"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:textColor="#B0BEC5" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/start_input_ticket_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_weight="1"
                android:onClick="onInputTicketClick"
                android:clickable="true"
                android:src="@drawable/ticket" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/start_jump_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_weight="1"
                android:onClick="onJumpClick"
                android:src="@drawable/jump" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>