<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kr.co.airbridge.airable.LoginActivity"
    tools:ignore="ContentDescription">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C2C2C2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_facebook_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/login_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/login_user_email_hint"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/login_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/login_user_password_hint"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_email_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_email_btn"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:textColor="#FFFFFF"
            android:onClick="onEmailLoginClick"
            />
    </LinearLayout>

</LinearLayout>